--- a/style.css
+++ b/style.css
@@ -2,32 +2,23 @@ body {
   padding: 0;
   margin: 0;
 }
+.contact___info p {
+  position: absolute;
+}
+.banner {
+  width: 100%;
+  height: 100vh;
+  background-color: #c6fafc;
+  background-size: contain;
+  background-image: url("img/Group\ 230.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+}
 .container {
   position: relative;
   margin-top: 100px;
 }
-.hero-image {
-  /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-  background-image: url("img/Group\ 230.png");
-  /* Set a specific height */
-  height: 50%;
 
-  /* Position and center the image to scale nicely on all screens */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-}
-
-/* Place text in the middle of the image */
-.hero-text {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-}
 .container img {
   display: block;
   width: 100%;
