--- a/style.css
+++ b/style.css
@@ -2,6 +2,15 @@ body {
   padding: 0;
   margin: 0;
 }
+.about__text {
+  position: absolute;
+  color: #000000;
+  margin-top: 150px;
+  margin-left: 260px;
+  text-align: center;
+  max-width: 1000px;
+}
+
 .contact__info {
   position: absolute;
   color: #000;
@@ -43,14 +52,15 @@ nav {
   background-color: white;
 }
 nav .logo {
-  float: left;
-  width: 40%;
+  width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
+  justify-content: center;
   font-size: 24px;
   color: #fff;
 }
+
 nav .links {
   float: right;
   padding: 0;
